--- a/data_processing_and_analysis/0-clean_data.ipynb
+++ b/data_processing_and_analysis/0-clean_data.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First of all : install dependencies \n",
-    "%pip install datasets emoji"
+    "# Install Dependencies\n",
+    "%pip install datasets emoji nltk"
    ]
   },
   {
@@ -380,6 +380,131 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\eelhaym\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet</th>\n",
+       "      <th>label</th>\n",
+       "      <th>inpu_ids</th>\n",
+       "      <th>tweet_token</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>على حسب موقعك يبدو أنك صاحب نظرة ثاقبة يخي تبهليل</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[2, 1977, 4295, 45431, 8497, 2237, 3164, 7427,...</td>\n",
+       "      <td>[على, حسب, موقعك, يبدو, أنك, صاحب, نظرة, ثاقبة...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>تبهليل هاذا</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[2, 37195, 2712, 17032, 3]</td>\n",
+       "      <td>[تبهليل, هاذا]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>هاذي تبهليل ماشي فهامة</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[2, 11326, 37195, 2712, 6377, 33182, 2171, 3]</td>\n",
+       "      <td>[هاذي, تبهليل, ماشي, فهامة]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>تخاف نجاوب يا ناصر ببلوك لانو طريقة السؤال فيه...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[2, 7748, 20558, 2107, 2023, 5284, 3809, 3947,...</td>\n",
+       "      <td>[تخاف, نجاوب, يا, ناصر, ببلوك, لانو, طريقة, ال...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>مرنكة أقسم بالله تبهليل ما بعد منتصف الليل</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[2, 60483, 7133, 4342, 2458, 37195, 2712, 1962...</td>\n",
+       "      <td>[مرنكة, أقسم, بالله, تبهليل, ما, بعد, منتصف, ا...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               tweet  label  \\\n",
+       "0  على حسب موقعك يبدو أنك صاحب نظرة ثاقبة يخي تبهليل      2   \n",
+       "1                                        تبهليل هاذا      2   \n",
+       "2                             هاذي تبهليل ماشي فهامة      2   \n",
+       "3  تخاف نجاوب يا ناصر ببلوك لانو طريقة السؤال فيه...      2   \n",
+       "4         مرنكة أقسم بالله تبهليل ما بعد منتصف الليل      2   \n",
+       "\n",
+       "                                            inpu_ids  \\\n",
+       "0  [2, 1977, 4295, 45431, 8497, 2237, 3164, 7427,...   \n",
+       "1                         [2, 37195, 2712, 17032, 3]   \n",
+       "2      [2, 11326, 37195, 2712, 6377, 33182, 2171, 3]   \n",
+       "3  [2, 7748, 20558, 2107, 2023, 5284, 3809, 3947,...   \n",
+       "4  [2, 60483, 7133, 4342, 2458, 37195, 2712, 1962...   \n",
+       "\n",
+       "                                         tweet_token  \n",
+       "0  [على, حسب, موقعك, يبدو, أنك, صاحب, نظرة, ثاقبة...  \n",
+       "1                                     [تبهليل, هاذا]  \n",
+       "2                        [هاذي, تبهليل, ماشي, فهامة]  \n",
+       "3  [تخاف, نجاوب, يا, ناصر, ببلوك, لانو, طريقة, ال...  \n",
+       "4  [مرنكة, أقسم, بالله, تبهليل, ما, بعد, منتصف, ا...  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tokenization\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "nltk.download('punkt_tab')\n",
+    "\n",
+    "def Tokenize_fn(tweet):\n",
+    "    return word_tokenize(tweet)\n",
+    "\n",
+    "moroccan_tweets_train_df[\"tweet_token\"] = moroccan_tweets_train_df['tweet'].apply(Tokenize_fn)\n",
+    "moroccan_tweets_test_df[\"tweet_token\"] = moroccan_tweets_test_df['tweet'].apply(Tokenize_fn)\n",
+    "moroccan_tweets_validation_df[\"tweet_token\"] = moroccan_tweets_validation_df['tweet'].apply(Tokenize_fn)\n",
+    "moroccan_tweets_train_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,7 +517,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tokenization"
+    "# Install Dependencies\n",
+    "%pip install matplotlib seaborn wordcloud networkx arabic-reshaper python-bidi"
    ]
   },
   {
@@ -401,7 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# N-gram Generation"
+    "# N-gram Generation\n",
+    "\n"
    ]
   },
   {
@@ -410,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Frequency Analysis"
+    "# Frequency Analysis\n"
    ]
   },
   {
@@ -419,7 +546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualization and Analysis"
+    "# Visualization and Analysis\n"
    ]
   }
  ],
